# antweb-scraper

./: .gitignore  README.md  flake.nix  output.tif  pyproject.toml
antweb_scraper/: __init__.py  __main__.py  console.py  const.py
antweb_scraper/core/: __init__.py  metadata.py  models.py  picture.py  result.py
input/: all.xlsx
