[tool.poetry]
name = "antweb-scraper"
version = "0.1.0"
description = ""
authors = ["Noah Gardner <ngngardner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^10.12.0"
bs4 = "^0.0.1"
requests = "^2.26.0"
openpyxl = "^3.0.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
antweb = 'antweb_scraper.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
